--- a/src/pages/puzzles/puzzle/styles.module.scss
+++ b/src/pages/puzzles/puzzle/styles.module.scss
@@ -103,7 +103,6 @@ main[data-theme="dark"] .list {
         transform: rotate(45deg);
         border-radius: 0;
         box-shadow: 0 0 3px rgba(0,0,0,.3);
-        z-index: -1;
     }
 
     .title {
